--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -78,7 +78,7 @@ tail_includes:
           <em id="pv" class="pageviews">
             <i class="fa-duotone fa-circle-dot"></i>
           </em>
-          <img style="width: inherit;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fwww.azuredoctor.com%2F{{ page.url }}&count_bg=%2318C0B2&title_bg=%23630A96&icon=youtube.svg&icon_color=%23E7E7E7&title=VIEWS&edge_flat=false" alt="Hits" />
+          <img style="width: inherit;" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fwww.azuredoctor.com%2F{{ page.url }}&count_bg=%2318C0B2&title_bg=%23630A96&icon=statuspage.svg&icon_color=%23E7E7E7&title=VIEWS&edge_flat=false" alt="Hits" />
         </span>
         
         <!-- read time -->
