--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -74,6 +74,13 @@ tail_includes:
           </em>
         </span>
         
+        <span>
+          <em id="pv" class="pageviews">
+            <i class="fa-duotone fa-circle-dot"></i>
+          </em>
+          <img style="width: inherit;" src="https://hits.aquib-qureshi.workers.dev/{{ page.url | split: '/' | reject: '' | last }}.svg?action=hit&count_bg=%233DC8C0&title_bg=%23555555&title=page%20views%20(today/total)&edge_flat=false" alt="Hits" />  
+        </span>
+        
         <!-- read time -->
         {% include read-time.html content=content prompt=true lang=lang %}
       </div>
