--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -78,7 +78,7 @@ tail_includes:
           <em id="pv" class="pageviews">
             <i class="fa-duotone fa-circle-dot"></i>
           </em>
-          <img style="width: inherit;" src="https://hits.aquib-qureshi.workers.dev/{{ page.url | split: '/' | reject: '' | last }}.svg?action=hit&count_bg=%233DC8C0&title_bg=%23555555&title=page%20views%20(today/total)&edge_flat=false" alt="Hits" />  
+          <img style="width: inherit;" src="https://hits.aquib-qureshi.workers.dev/{{ page.url | split: '/' | reject: '' | last }}.svg?action=hit&count_bg=blue&title=views%20(Today/Total)&edge_flat=false" alt="Hits" />  
         </span>
         
         <!-- read time -->
